--- a/src/main/resources/static/assets/css/articles.css
+++ b/src/main/resources/static/assets/css/articles.css
@@ -6,6 +6,9 @@ main {
 	max-width: 900px;
 	width: 100%;
 	margin: 0 auto;
+	border-top: 4px solid coral;
+    border-bottom: 4px solid coral;
+    margin-bottom: 30px;
 }
 
 
